--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   metabase:
-    image: metabase/metabase:v0.46.2
+    image: metabase/metabase:latest
     ports:
       - "3000:3000"
     environment:
